# osprey

./: .gitignore  .gitmodules  LICENSE  README.md  return_codes.md  sam2_environment.yml
cad_parts/: 048215_09.prt  052611_00.prt  053448_00.prt  073513_00.prt  073514_00.prt  073515_00.prt  073517_00.prt  073518_00.prt  073519_00.prt  073520_00.prt  073521_00.prt  073522_00.prt  073523_00.prt  073524_00.prt  073525_00.prt  073526_00.prt  073527_00.prt  073528_00.prt  073529_00.prt  073531_00.prt  073532_00.prt  073533_00.prt  073534_00.prt  073535_00.prt  073536_00.prt  073537_00.prt  073538_00.prt  073539_00.prt  073540_00.prt  073541_00.prt  073542_00.prt  073543_00.prt  073544_00.prt  073545_00.prt  073546_00.prt  073547_00.prt  073548_00.prt  073549_00.prt  073550_00.prt  073551_00.prt  (+310 more)
src/gripper_control/: CMakeLists.txt  package.xml
src/gripper_control/arduino_files/gripper_osprey/: gripper_osprey.ino
src/gripper_control/include/gripper_control/: gripper_control.hpp
src/gripper_control/src/: gripper_control.cpp  gripper_control_app.cpp
src/mission_control/: CMakeLists.txt  package.xml
src/mission_control/include/mission_control/: mission_control.hpp  telemetry.hpp
src/mission_control/src/: mission_control.cpp
src/mission_control/src/actions/: arm.cpp  go_to_pos.cpp  hover_acc.cpp  land.cpp  set_gripper.cpp  takeoff.cpp
src/mission_control/src/missions/: acceleration_test.cpp  dev_publisher.cpp  go_to_object_test.cpp  grasp.cpp  gripper_test_setpoint.cpp  gripper_test_static.cpp  object_search.cpp  square.cpp  swoop.cpp  takeoff_test.cpp
src/object_detection/: package.xml  setup.cfg  setup.py
src/object_detection/launch/: object_detection_node.launch.py
src/object_detection/object_detection/: detection.py  frame_transformations.py  pointcloud.py  sam2_detection.py  sam2_detector.py  streamer_receiver.py  streamer_sender.py  utils.py  video_receiver_node.py  video_sender_node.py  visualizer.py  webcam_publisher.py
src/osprey_interface/: CMakeLists.txt  package.xml
src/osprey_interface/action/: GoToPos.action  HoverAcc.action  Takeoff.action
src/osprey_interface/msg/: Acceleration.msg  Detection.msg  Pose.msg  Velocity.msg
src/osprey_interface/srv/: GoToPos.srv  QuadStatus.srv  SetGripper.srv
src/quad_control/: CMakeLists.txt  LICENSE.txt  package.xml
src/quad_control/include/quad_control/: mavsdk_wrapper.hpp  quad.hpp  quad_state.hpp
src/quad_control/src/actions/: goToPos.cpp  hover_acc.cpp  takeoff.cpp
src/quad_control/src/apps/: pose_transformer.cpp  quad_control.cpp
src/quad_control/src/quad/: quad.cpp
src/quad_control/src/wrappers/: mavsdk_wrapper.cpp
src/spectacular_vio/: package.xml  setup.cfg  setup.py
src/spectacular_vio/launch/: spectacular_node.launch.py
src/spectacular_vio/spectacular_vio/: spectacular_node.py  vicon_obj_publisher.py
src/vicon/: CMakeLists.txt  package.xml
src/vicon/include/PX4-Matrix/: CMakeLists.txt
src/vicon/include/vicon/: vicon_helper.h
src/vicon/src/: kimera_pose_transformer.cpp  kimera_px4_transmitter.cpp  px4_publisher.cpp  rovio_px4_interface.cpp  vicon_publisher.cpp  vicon_px4_interface.cpp  vicon_px4_publisher.cpp  vio_publisher.cpp  vio_px4_interface.cpp
src/vicon/vicon_datastream/: CMakeLists.txt  README.md
src/vicon/vicon_datastream/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_CPP/: DataStreamClient.cpp
src/vicon/vicon_datastream/vicon_datastream_app/: CMakeLists.txt
src/vicon/vicon_datastream/vicon_datastream_app/src/: ViconDataStreamSDK_CPPTest.cpp  vicon_cleaned.cpp  vicon_commented.cpp
